fix x-scroll (add overflow-x: hidden)

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -11,12 +11,6 @@ body {
   overflow-wrap: break-word;
 }
 
-header,
-main,
-footer {
-  overflow-x: hidden;
-}
-
 button,
 input,
 select,
