--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -7,6 +7,14 @@
 // ------------------------------------------------
 
 // ----------------------
+// ラッパー
+// ----------------------
+.wrapper {
+  // 横方向にはみ出るのを隠す
+  overflow-x: hidden;
+}
+
+// ----------------------
 // レイアウト
 // ----------------------
 
